<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3b2816"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRowDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                style="@style/Heading"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.2"
                android:onClick="DecrementDateByOne"
                android:text="@string/lt" >
            </Button>

            <Button
                android:id="@+id/set_date_btn"
                style="@style/Heading"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:drawableLeft="@drawable/ic_action_pick_date"
                android:onClick="onSetDateBtnClicked" >
            </Button>

            <Button
                style="@style/Heading"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:onClick="IncrementDateByOne"
                android:text="@string/gt" >
            </Button>
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/Heading"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.4"
                android:text="@string/time_zone_label" />

            <Spinner
                android:id="@+id/availableID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <FrameLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.80" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/locationname"
                        style="@style/Heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/latitudelabeltv"
                            style="@style/Heading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:gravity="left"
                            android:text="@string/latitude_label" />

                        <TextView
                            android:id="@+id/latitudeTV"
                            style="@style/Heading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="22.8045" />

                        <TextView
                            style="@style/Heading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:gravity="left"
                            android:text="@string/longitude_label" />

                        <TextView
                            android:id="@+id/longitudeTV"
                            style="@style/Heading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="86.2028" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/time_zone_name"
                        style="@style/Heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.20" >

                <ImageButton
                    android:id="@+id/updatelocBtn"
                    style="@style/Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@string/imgdesc"
                    android:height="40dip"
                    android:onClick="onSetLocationBtnClicked"
                    android:src="@drawable/ic_action_locate" >
                </ImageButton>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.15"
                android:text="@string/official_sunrise_time_label" />

            <TextView
                android:id="@+id/official_sunrise_time"
                style="@style/Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.35"
                android:textColor="#b68e2e"
                android:textSize="30sp" />

            <TextView
                style="@style/Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.15"
                android:text="@string/official_sunset_time_label" />

            <TextView
                android:id="@+id/official_sunset_time"
                style="@style/Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.15"
                android:textColor="#b68e2e"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/Heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:text="@string/transit_time:" />

            <TextView
                android:id="@+id/officialTransitTimeTV"
                style="@style/Heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.3"
                android:gravity="left" />
        </LinearLayout>
    </TableLayout>



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TableRow
            android:id="@+id/tableheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:background="@null" />

            <TextView
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.2"
                android:text="@string/sunrise" />

            <TextView
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.2"
                android:text="@string/sunset" />

            <TextView
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:text="@string/transit_time" />
        </TableRow>

        <TableRow
            android:id="@+id/astronomical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:text="@string/astronomical" />

            <TextView
                android:id="@+id/astronomicalSunriseTV"
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/astronomicalSunsetTV"
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/astronomicalTransitTimeTV"
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3" />
        </TableRow>

        <TableRow
            android:id="@+id/nautical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:text="@string/nautical" />

            <TextView
                android:id="@+id/nauticalSunriseTV"
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/nauticalSunsetTV"
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/nauticalTransitTimeTV"
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3" />
        </TableRow>

        <TableRow
            android:id="@+id/civil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:text="@string/civil" />

            <TextView
                android:id="@+id/civilSunriseTV"
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/civilSunsetTV"
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/civilTransitTimeTV"
                style="@style/TableCells"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3" />
        </TableRow>
    </TableLayout>

</LinearLayout>